completed resizing of the TARDIS

--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
 <body>
 
    
-<div id="wrapper">
+<div id="tardis">
 
 <div id="roofTop">
  <div class="lightDome"></div>
   <div class="lightTop"></div><!--lightBase-->
   <div class="light">  </div><!--light-->
   <div class="lightBase"></div><!--lightBase-->
-<!-- </div><!--roofLight-->
+</div><!--roofTop-->
 
   <div class="roofSlant"> </div>
 
  
-</div><!--roofTop--> 
+
 <div class="roofUnSlant"> </div>
 <div id="top"></div>
 
@@ -97,13 +97,12 @@
     <div class="panel1"></div>
   </div> <!--rightdoor-->
 <div class="rightPillar"><div id="littleBit2"></div><div id="otherLittleBit2"></div></div>
-  
+ <div id="base"></div> 
+
 </div><!--door container-->
 
-
-<div id="base"></div>
-  
 </div>  
+</div>
 
     <script  src="js/index.js"></script>
 
