--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
 <body>
 
+<h1 id="guessWho">Guess Who</h1>
+
    
 <div id="tardis">
 
@@ -71,7 +73,7 @@
   </div><!--left window-->
   <div class="panel1">
    <div class="freeFor"><p class="policeTelephone">POLICE TELEPHONE
-    <br><br>FREE <br> FOR USE OF <br>PUBLIC<br> <br>
+    <br><br><strong>FREE </strong><br> FOR USE OF <br><strong>PUBLIC </strong><br> <br>
     
    <small> ADVICE AND ASSISTANCE OBTAINABLE IMMEADIATLEY <br>OFFICER & CARS
       RESPOND TO ALL CALLS </small><br><br> PULL TO OPEN</p>
