Making alterations to the logo

--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
 
 <body>
 
-<h1 id="guessWho">Guess Who</h1>
-
+<div id="guessWho">
+<h1 id="guess">GUESS</h1>
+<h1 id="who">Who</h1>
+</div>
    
 <div id="tardis">
 
