Made a lock for the tardis with CSS

--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
 <h1 id="guess">GUESS</h1>
 <h1 id="who">Who</h1>
 </div>
+
+<div id="lock">
+  <div id="outerLock">
+    <div id="innerLock">
+      <div id="keyhole">}</div>
+    </div>
+  </div>
+</div>
    
 <div id="tardis">
 
