completed css handle and worked on fixing the lock in place

--- a/index.html
+++ b/index.html
@@ -38,7 +38,18 @@
     </div>
   </div>
 </div>
-   
+
+<div class="doorHandle">
+  <div class="handle"> 
+    <div class="screw1"><p>x</p></div>
+
+    <div class="gripBit">
+       <div class="shimmer"></div>
+    </div>
+    <div class="screw2"><p>x</p></div>
+  </div>
+ </div>
+
 <div id="tardis">
 
 <div id="roofTop">
@@ -105,7 +116,30 @@
     <div class="pane1"></div>
     <div class="pane2"></div>
   </div><!--right window-->
-   <div class="panel1"><img src="http://res.cloudinary.com/dll4jwg72/image/upload/c_scale,w_80/v1504000707/tardis_st__john_ambulance_plaque__transparent_bg__by_shardsofblue-d5gdkot_dzo23y.png" class="stJohn"></div>
+
+  <div class="doorHandle">
+  <div class="handle"> 
+    <div class="screw1"><p>x</p></div>
+
+    <div class="gripBit">
+       <div class="shimmer"></div>
+    </div>
+    <div class="screw2"><p>x</p></div>
+  </div>
+ </div>
+
+ <div id="lock">
+  <div id="outerLock">
+    <div id="innerLock">
+      <div id="keyhole">}</div>
+    </div>
+  </div>
+</div>
+
+   <div class="stJohnPanel"><img src="http://res.cloudinary.com/dll4jwg72/image/upload/c_scale,w_80/v1504000707/tardis_st__john_ambulance_plaque__transparent_bg__by_shardsofblue-d5gdkot_dzo23y.png" class="stJohn"></div>
+
+    
+
     <div class="panel1"></div>
     <div class="panel1"></div>
   </div> <!--rightdoor-->
