finished off placing the Tardis lock and handle to thedoor

--- a/index.html
+++ b/index.html
@@ -31,24 +31,7 @@
 <h1 id="who">Who</h1>
 </div>
 
-<div id="lock">
-  <div id="outerLock">
-    <div id="innerLock">
-      <div id="keyhole">}</div>
-    </div>
-  </div>
-</div>
 
-<div class="doorHandle">
-  <div class="handle"> 
-    <div class="screw1"><p>x</p></div>
-
-    <div class="gripBit">
-       <div class="shimmer"></div>
-    </div>
-    <div class="screw2"><p>x</p></div>
-  </div>
- </div>
 
 <div id="tardis">
 
@@ -129,7 +112,9 @@
  </div>
 
  <div id="lock">
+
   <div id="outerLock">
+  <div id="dot"></div>
     <div id="innerLock">
       <div id="keyhole">}</div>
     </div>
