Added the buttons and other text to the page

--- a/index.html
+++ b/index.html
@@ -26,11 +26,26 @@
 
 <body>
 
+<div id="textWrapper">
+
 <div id="guessWho">
 <h1 id="guess">GUESS</h1>
 <h1 id="who">Who</h1>
 </div>
 
+<p id="greeting">Welcome Guess Who. The aim of the game is to guess Who is your favorite Doctor Who Doctor. </p>
+
+<div id="question">The app will ask you a series of questions, all you need to do is click yes or no, then the app will try to guess Who your favorite Doctor who is.</div>
+
+</div>
+
+<div id="buttons">
+  <input class="btn btn-success" type="button" value="Yes">
+<input class="btn btn-danger" type="submit" value="No">
+
+</div>
+
+</div>
 
 
 <div id="tardis">
