--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <div id="buttons">
   <input id="yes" class="btn btn-success" type="button" value="Yes">
-<input class="btn btn-danger" type="submit" value="No">
+<input class="btn btn-danger" type="button" value="No">
 
 </div>
 
